# llm.stuff

./: CMakeLists.txt  README.md  bench.py  bench_inline.py  kernels.cu  kernels.cuh  profile_kernels.py  pt_binding.cpp  test_kernels.py  transformer_block.py
